# takopi

./: .gitignore  Justfile  changelog.md  claude.md  developing.md  plugins-progress.md  plugins.md  pyproject.toml  readme.md
.codex/: AGENTS.md
codex/notify_telegram/: readme.md
codex_telegram_bridge/: pyproject.toml  readme.md
codex_telegram_bridge/src/codex_telegram_bridge/: exec_bridge.py  exec_render.py  logging.py  rendering.py  routes.py  telegram_client.py
codex_telegram_bridge/tests/: conftest.py  test_exec_bridge.py  test_exec_render.py
docs/: adding-a-runner.md  developing.md  plugins.md  projects.md  specification.md
docs/reference/runners/pi/: runner.md  stream-json-cheatsheet.md  (+1 more)
scripts/: docs_build_cf.sh  install-restart-takopi.sh  restart-takopi-claude.md  restart-takopi.sh
src/takopi/: cli.py  commands.py  config.py  config_watch.py  constants.py  context.py  engines.py  exec_bridge.py  exec_render.py  ids.py  lockfile.py  logging.py  markdown.py  onboarding.py  plugins.py  profile.py  progress.py  router_factory.py  runner.py  runner_bridge.py  runtime_loader.py  scheduler.py  settings.py  telegram.py  transport.py  transport_runtime.py  transports.py  worktrees.py
src/takopi/plugins/: __init__.py  api.py  installer.py  manager.py  slash_commands.py
src/takopi/runners/: claude.py  codex.py  mock.py  opencode.py  pi.py
src/takopi/schemas/: pi.py
src/takopi/telegram/: __init__.py  bridge.py  chat_sessions.py  client.py  client_api.py  commands.py  config.py  loop.py  onboarding.py  parsing.py  state_store.py  topic_state.py  topics.py
src/takopi/utils/: git.py  paths.py  shell_env.py  streams.py  subprocess.py
tests/: test_backends_helpers.py  test_claude_schema.py  test_cli_helpers.py  test_codex_schema.py  test_codex_tool_result_summary.py  test_commands.py  test_config_dump.py  test_engine_discovery.py  test_engine_specs.py  test_exec_bridge.py  test_exec_render.py  test_git_utils.py  test_lockfile.py  test_opencode_schema.py  test_paths.py  test_pi_runner.py  test_pi_schema.py  test_plugins_installer.py  test_plugins_manager.py  test_profile.py  test_profile_commands.py  test_projects_config.py  test_settings.py  test_shell_env.py  test_slash_commands_plugin.py  test_streams.py  test_subprocess.py  test_telegram_agent_trigger_commands.py  test_telegram_bridge.py  test_telegram_incoming.py  test_telegram_polling.py  test_telegram_queue.py  test_telegram_voice.py  test_worktrees.py
(+4 files in other folders)
